--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -6,4 +6,5 @@
     --color-main-foreground: hsl(120, 100%, 100%);
     --color-platinum-gray: #E5E5E5;
     --color-grim-gray: #D0D7DE;
+    --color-steel-gray: #6D6D6D;
 }
