--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -18,6 +18,21 @@ h2 {
     font-size: 14px;
 }
 
+.container {
+    width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.content {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.page-body {
+    background-color: var(--color-main-foreground);
+}
+
 .button {
     padding: 10px;
     padding-left: 30px;
