Реализована поддержка постраничной маршрутизации
-	Реализован скрипт `routes.js`, добавлены маршруты главной
	страницы и страницы каталога.
-	Улучшен компонент loader, теперь он имеет варианты отрисовки.
-	Реализована полоса загрузки под шапкой, будет отображаться
	во время загрузки данных.
-	Декомпозирован компонент `App.vue`.
-	Усовершенствована вёрстка тела страницы.
-	Реализован компонент `FooterInfo.vue` с информацие о приложении.
-	Добавлена поддержка новых начертаний шрифта `Montserrat`.

--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -7,4 +7,5 @@
     --color-platinum-gray: #E5E5E5;
     --color-grim-gray: #D0D7DE;
     --color-steel-gray: #6D6D6D;
+    --color-main-font: #343434;
 }
