--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -8,12 +8,27 @@
 
 @font-face {
     font-family: 'Montserrat';
+    src: local('Montserrat SemiBold'), local('Montserrat-SemiBold');
+    src: url('../fonts/Montserrat-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
     src: local('Montserrat Medium'), local('Montserrat-Medium');
     src: url('../fonts/Montserrat-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Regular'), local('Montserrat-Regular');
+    src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
 
 @font-face {
     font-family: 'Montserrat';
@@ -22,3 +37,5 @@
     font-weight: 300;
     font-style: normal;
 }
+
+/* Montserrat-SemiBold */
