--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,23 +3,25 @@ p, a, span, i, label, button, input {
     font-weight: 300;
     font-size: 12px;
     text-decoration: none;
-    color: #222222;
+    color: var(--color-main-font);
+}
+
+h1, h2, h3 {
+    font-family: 'Montserrat';
+    color: var(--color-main-font);
 }
 
 h1 {
-    font-family: 'Montserrat';
     font-weight: 900;
     font-size: 16px;
 }
 
 h2 {
-    font-family: 'Montserrat';
     font-weight: 900;
     font-size: 14px;
 }
 
 h3 {
-    font-family: 'Montserrat';
     font-weight: 500;
     font-size: 14px;
 }
@@ -49,7 +51,7 @@ h3 {
     padding-right: 30px;
 
     box-sizing: border-box;
-    width: min-content;
+    width: fit-content;
 
     cursor: pointer;
     user-select: none;
