Реализован `ButtonChecker.vue`, существенно улучшена карточка товаров
-	Множественные исправления вёрстки.
-	Реализован `ButtonChecker.vue`, для выбора нескольких вариантов
	из представленных опций.
	Примечание:
	В компоненте замечен баг: иногда не обновляет глобальный массив
	выбранных опций.
-	Реализована отрисовка загрузки данных.
-	Улучшена карточка товара: теперь она может разворачиваться в
	высоту, по щелчку, что увеличивает количество помещаемого
	контента. В последствии, в развёрнутый вариант карточки товара
	будут добавлены кнопки клиента и администратора.
-	Улучшена карточка товара: теперь карточка товара отображает
	характеристики товара сразу под заголовком.
	Приммечание:
	* Характеристики пока не подставляются динамически.
	* Сказать Кате отправлять с backend характеристики не только
	по id, но и с `display_name`.
	* Сказать Кате изменить API.

--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -1,6 +1,7 @@
 :root {
     --color-main-layer: #D9E0FF;
     --color-main-accent: #455BED;
+    --color-main-accent-light: #6A7CF1;
     --color-main-accent-transparent: rgba(69, 91, 237, 80%);
     --color-main-background: #F6F8FA;
     --color-main-foreground: hsl(120, 100%, 100%);
