--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -71,3 +71,21 @@ h3 {
 .content section > h3 {
     margin-bottom: 20px;
 }
+
+
+@media screen and (max-width: 1280px) {
+  .container {
+    width: auto;
+  }
+  .content {
+    width: min-content;
+  }
+  .item-list-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 860px) {
+  .item-list-grid {
+    grid-template-columns: 1fr;
+  }
+}
