Реализована форма аутентификации

--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -11,6 +11,8 @@
     --color-main-accept: #70e000; 
     --color-main-accept-transparent: #70e00060;
 
+    --color-backdrop-shadow: #00000090;
+
     --color-platinum-gray: #E5E5E5;
     --color-grim-gray: #D0D7DE;
     --color-steel-gray: #6D6D6D;
